--- a/ShopOnline.Web/Pages/Products.razor
+++ b/ShopOnline.Web/Pages/Products.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 @inherits ProductsBase
 
-@if(Products == null)
+@if (Products == null)
 {
-	<h3>Loading products...</h3>
+    <h3>Loading products...</h3>
 }
 else
 {
@@ -13,18 +13,14 @@ else
 
     @if (productCount > 0)
     {
-        const int itemsPerRow = 4;
-        var productRowList = new List<ProductDto>();
-
-        @for (int i = 0; i < productCount; i++)
+        @foreach (var prodGroup in GetGroupedProductsByCategory())
         {
-            productRowList = Products.Skip(i * itemsPerRow).Take(itemsPerRow).ToList();
+            <h4>@GetCategoryName(prodGroup)</h4>
 
             <div class="row mt-3">
-                
-                <DisplayProducts Products = "@productRowList"></DisplayProducts>
-
+                <DisplayProducts Products="@prodGroup.Take(4)"></DisplayProducts>
             </div>
+            <hr class="mb-3"/>
         }
     }
 }
