Loading indicator added.

--- a/ShopOnline.Web/Pages/ProductDetails.razor
+++ b/ShopOnline.Web/Pages/ProductDetails.razor
@@ -1,12 +1,13 @@
 ﻿@page "/ProductDetails/{id:int}"
 @inherits ProductDetailsBase
 
-@if (Product == null)
+@if (Product == null && ErrorMessage == null)
 {
-    <h3>Loading product details...</h3>
-}else if (ErrorMessage != null)
+    <DisplaySpinner />
+}
+else if (ErrorMessage != null)
 {
-    <h3 class = "text-danger">@ErrorMessage</h3>
+    <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
 }
 else
 {
